fix spacing on weather tip

--- a/src/styles/modules/_block-weather-tip.styl
+++ b/src/styles/modules/_block-weather-tip.styl
@@ -10,10 +10,10 @@
     text-transform $module-weather-tip-text-transform
     color $module-weather-tip-text-color
     font-size $module-weather-tip-text-size-mobile
-    line-height rem(29px)
+    line-height rem(18.5px)
     margin 0
     text-align center
-    padding rem(15px)
+    padding rem(15px) rem(15px) rem(16px)
 
     +above(m)
       display inline-block
